2010-03-04  Abel Cheung  <abelcheung@gmail.com>

	* Update ZeroClipboard to newest version (1.0.6).
	* Incorporate jquery.copyable, which transforms ZeroClipboard
	  into jQuery plugin.
	* wp-scorerender.php:
	- Instead of showing music source through showcode.php, now
	  ZeroClipboard flash is directly overlayed onto image.

2010-03-03  Abel Cheung  <abelcheung@gmail.com>

	* Replace jQuery Color Picker with jscolor, which use less
	  resource and (more important) is more responsive.

2010-03-03  Abel Cheung  <abelcheung@gmail.com>

	* misc/tint-image.php:
	- Prints HTTP response code upon error, and appropriate header
	  for better caching.
	   
2010-03-03  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php:
	- Re-add is_notation_usable() to interface.
	* scorerender-utils.php (transform_paths):
	- Handle the case when setting is a MIDI program.
	
2010-03-03  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-utils.php:
	- (search_path) Removed, functionality merged into search_prog().
	- (search_prog) New func, also searches user specified paths.
	* wp-scorerender.php (scorerender_get_def_settings),
	  scorerender-class.php (define_setting_value),
	  notation/lilypond.php (define_setting_value):
	- Use search_prog() globally.

2010-03-03  Abel Cheung  <abelcheung@gmail.com>

	* notation/*.php, wp-scorerender.php:
	- Use WP hook and static methods to register notation data
	  instead of adding directly to global variable.
	- (register_notation_data) New func.
	* scorerender-class.php:
	- Add register_notation_data() to Interface method.

2010-03-03  Abel Cheung  <abelcheung@gmail.com>

	* notation/{abc,mup,pmw}.php, scorerender-class.php:
	- (is_notation_usable, define_setting_value) Move common code
	  to parent class.

2010-03-02  Abel Cheung  <abelcheung@gmail.com>

	* notation/*.php:
	- Start moving notation data into class.

2010-03-02  Abel Cheung  <abelcheung@gmail.com>

	* notation/*.php, scorerender.php: